--- a/examples/card/package.json
+++ b/examples/card/package.json
@@ -19,12 +19,13 @@
   },
   "homepage": "https://github.com/devsy-io/devsy-components.git",
   "dependencies": {
-    "react": "^0.13.3"
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "devDependencies": {
-    "babel-core": "^5.6.18",
-    "babel-loader": "^5.1.4",
-    "node-libs-browser": "^0.5.2",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "node-libs-browser": "^1.0.0",
     "react-hot-loader": "^1.2.7",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0"
