added styles to card component and improved webpack configurations

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "UI components toolkit for devsy.io",
   "main": "lib/index.js",
   "scripts": {
+    "phoenix": "rimraf node_modules && npm install",
     "clean": "rimraf lib dist",
-    "build": "babel src --out-dir lib",
-    "build:umd": "webpack src/index.js dist/devsy-components.js && NODE_ENV=production webpack src/index.js dist/devsy-components.min.js",
+    "lib": "npm run lib:scss && npm run lib:js",
+    "lib:js": "babel src --out-dir lib",
+    "lib:scss": "copyfiles -u 1 './src/**/*.scss' lib",
+    "build:umd": "npm run build && npm run build:prod",
+    "build": "webpack",
+    "build:prod": "webpack --config webpack.config.prod.babel.js",
     "lint": "standard --verbose | ./node_modules/.bin/snazzy",
     "test": "NODE_ENV=test mocha",
     "test:watch": "NODE_ENV=test mocha --watch",
@@ -34,11 +39,17 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
+    "copyfiles": "^0.2.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "isparta": "^4.0.0",
     "mocha": "^2.2.5",
+    "node-sass": "^3.7.0",
     "rimraf": "^2.3.4",
+    "sass-loader": "^3.2.0",
     "snazzy": "^4.0.0",
     "standard": "^7.1.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.9.6",
     "webpack-dev-server": "^1.8.2"
   },
