--- a/examples/card/package.json
+++ b/examples/card/package.json
@@ -25,8 +25,12 @@
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
+    "css-loader": "^0.23.1",
     "node-libs-browser": "^1.0.0",
+    "node-sass": "^3.7.0",
     "react-hot-loader": "^1.2.7",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0"
   }
