added enzyme for testing

--- a/package.json
+++ b/package.json
@@ -5,17 +5,16 @@
   "main": "lib/index.js",
   "scripts": {
     "phoenix": "rimraf node_modules && npm install",
-    "clean": "rimraf lib dist",
+    "clean": "rimraf lib dist coverage",
     "lib": "npm run lib:scss && npm run lib:js",
     "lib:js": "babel src --out-dir lib",
     "lib:scss": "copyfiles -u 1 './src/**/*.scss' lib",
     "build:umd": "npm run build && npm run build:prod",
-    "build": "webpack",
-    "build:prod": "webpack --config webpack.config.prod.babel.js",
+    "build": "NODE_ENV=production webpack",
+    "build:prod": "NODE_ENV=production webpack --config webpack.config.prod.babel.js",
     "lint": "standard --verbose | ./node_modules/.bin/snazzy",
     "test": "NODE_ENV=test mocha",
     "test:watch": "NODE_ENV=test mocha --watch",
-    "test:cov": "babel-node ./node_modules/.bin/isparta cover ./node_modules/.bin/_mocha",
     "prepublish": "npm run lint && npm run test && npm run clean && npm run build && npm run build:umd"
   },
   "repository": {
@@ -41,10 +40,12 @@
     "chai": "^3.5.0",
     "copyfiles": "^0.2.1",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "isparta": "^4.0.0",
     "mocha": "^2.2.5",
     "node-sass": "^3.7.0",
+    "react-addons-test-utils": "^15.1.0",
+    "react-dom": "^15.1.0",
     "rimraf": "^2.3.4",
     "sass-loader": "^3.2.0",
     "snazzy": "^4.0.0",
