--- a/package.json
+++ b/package.json
@@ -34,28 +34,28 @@
   "homepage": "https://github.com/devsy-io/devsy-components.git",
   "devDependencies": {
     "babel-cli": "^6.9.0",
-    "babel-core": "^6.9.1",
+    "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
-    "copyfiles": "^0.2.1",
+    "copyfiles": "^1.0.0",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "mocha": "^2.2.5",
     "node-libs-browser": "^1.0.0",
-    "node-sass": "^3.7.0",
+    "node-sass": "^3.8.0",
     "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.2.7",
     "rimraf": "^2.3.4",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^3.2.1",
     "snazzy": "^4.0.0",
     "standard": "^7.1.2",
     "style-loader": "^0.13.1",
-    "webpack-dev-server": "^1.9.0",
-    "webpack": "^1.9.11"
+    "webpack": "^1.9.11",
+    "webpack-dev-server": "^1.9.0"
   },
   "dependencies": {
     "invariant": "^2.0.0",
