--- a/package.json
+++ b/package.json
@@ -39,31 +39,32 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.11.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
     "copyfiles": "^1.0.0",
     "css-loader": "^0.23.1",
-    "enzyme": "^2.3.0",
+    "enzyme": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "mocha": "^2.2.5",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.8.0",
-    "react-addons-test-utils": "^15.2.0",
+    "react-addons-test-utils": "^15.2.1",
     "react-hot-loader": "^1.2.7",
-    "rimraf": "^2.3.4",
+    "rimraf": "^2.5.3",
     "sass-loader": "^4.0.0",
     "snazzy": "^4.0.0",
     "standard": "^7.1.2",
     "style-loader": "^0.13.1",
-    "svg-inline-loader": "^0.6.0",
+    "svg-inline-loader": "^0.6.1",
     "svg-sprite": "^1.3.3",
     "webpack": "^1.9.11",
     "webpack-dev-server": "^1.9.0"
   },
   "dependencies": {
     "invariant": "^2.0.0",
-    "react": "^15.2.0",
-    "react-dom": "^15.2.0",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
     "react-syntax-highlighter": "^2.1.1"
   },
   "standard": {
