--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "webpack-dev-server": "^1.9.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "invariant": "^2.0.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
